P2022-1511 - Next Step implementation (#66)
* Next Step implementation

* - Changed "next" method logic in EnumStateDto,
- Added test for next method in EnumStateDto,
- Nonnull verification in nextState in boardService,
- Changed argument in boardBuilder in BoardServiceTest to be able to set a value when creating the board.

* when(boardRepository.findById(board_id)).thenReturn(Optional.empty()); added to test nextStateThrowsNotFoundIfBoardIsNotFound, few minor style changes

* - Took out the logic that was duplicated in both nextState and getBoardDataById into an outside method.
- Added BoardControllerTest for happy path 200 for nextState call

* Few minor changes to checkstyle

* 2 methods were renamed
nextState to setNextState and boardData to prepareBoardData