@@ -7,6 +7,7 @@ import com.intive.patronage22.szczecin.retroboard.dto.BoardDto;
 import com.intive.patronage22.szczecin.retroboard.dto.BoardPatchDto;
 import com.intive.patronage22.szczecin.retroboard.dto.EnumStateDto;
 import com.intive.patronage22.szczecin.retroboard.exception.BadRequestException;
+import com.intive.patronage22.szczecin.retroboard.exception.NotAcceptableException;
 import com.intive.patronage22.szczecin.retroboard.exception.NotFoundException;
 import com.intive.patronage22.szczecin.retroboard.model.Board;
 import com.intive.patronage22.szczecin.retroboard.model.BoardCard;
@@ -540,7 +541,7 @@ class BoardServiceTest {
         final var uid = "uid101";
         final var email = "username@test.pl";
         final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(user, EnumStateDto.CREATED, 10, Set.of());
+        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(),3);
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
         final var boardPatchDto = new BoardPatchDto("testboard", 1500);
 
@@ -557,7 +558,7 @@ class BoardServiceTest {
         final var email = "username@test.pl";
         final var boardName = "My first board.";
         final var userOwner = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(userOwner, EnumStateDto.CREATED, 10, Set.of());
+        final var board = buildBoard(10, EnumStateDto.CREATED, userOwner, Set.of(),3);
         final var boardPatchDto = new BoardPatchDto(boardName, 1500);
 
         // when
@@ -578,7 +579,7 @@ class BoardServiceTest {
         final var uid = "uid101";
         final var email = "username@test.pl";
         final var user = new User(uid, email, "displayName", Set.of(), Set.of());
-        final var board = buildBoard(user, EnumStateDto.CREATED, 10, Set.of());
+        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(),3);
         final var boardPatchDto = new BoardPatchDto(null, 1500);
 
         // when
@@ -638,7 +639,7 @@ class BoardServiceTest {
         //when
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(boardId))
-                .thenReturn(Optional.of(buildBoard(boardOwner, EnumStateDto.CREATED, 10, Set.of())));
+                .thenReturn(Optional.of(buildBoard(10, EnumStateDto.CREATED, boardOwner, Set.of(),3)));
 
         //then
         assertThrows(BadRequestException.class, () -> boardService.assignUsersToBoard(boardId, usersEmails, email));
@@ -658,7 +659,7 @@ class BoardServiceTest {
         final Set<User> boardUsers = new HashSet<>(List.of(existingUser));
         final List<User> existingUsers = List.of(userToAssign, existingUser);
 
-        final Board board = buildBoard(owner, EnumStateDto.CREATED, 10, boardUsers);
+        final Board board = buildBoard(10, EnumStateDto.CREATED, owner, boardUsers,3);
 
         //when
         when(userRepository.findUserByEmail(ownerEmail)).thenReturn(Optional.of(owner));
@@ -687,7 +688,7 @@ class BoardServiceTest {
         final var uid = "1234";
         final var email = "John@test.pl";
         final var user = new User(uid, email, "john14", Set.of(), Set.of());
-        final var board = buildBoard(user, EnumStateDto.VOTING, 10, Set.of());
+        final var board = buildBoard(10, EnumStateDto.VOTING, user, Set.of(),3);
         final var boardPatchDto = new BoardPatchDto("testboard", 1500);
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
@@ -703,7 +704,7 @@ class BoardServiceTest {
         final var uid = "1234";
         final var email = "John@test.pl";
         final var user = new User(uid, email, "john14", Set.of(), Set.of());
-        final var board = buildBoard(user, EnumStateDto.CREATED, 10, Set.of());
+        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(),3);
         final var boardPatchDto = new BoardPatchDto("testboard", 1500);
         when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
         when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
@@ -725,8 +726,8 @@ class BoardServiceTest {
         final var email2 = "username2@test.pl";
         final var user1 = new User(uid1, email1, "displayName1", Set.of(), Set.of());
         final var user2 = new User(uid2, email2, "displayName2", Set.of(), Set.of());
-        final var boardCreated = buildBoard(user1, EnumStateDto.CREATED, 10, Set.of());
-        final var boardAssigned = buildBoard(user2, EnumStateDto.CREATED, 11, Collections.singleton(user1));
+        final var boardCreated = buildBoard(10, EnumStateDto.CREATED, user1, Set.of(),3);
+        final var boardAssigned = buildBoard(11, EnumStateDto.CREATED, user2, Collections.singleton(user1),3);
         when(userRepository.findUserByEmail(email1)).thenReturn(Optional.of(user1));
         user1.setUserBoards(Collections.singleton(boardAssigned));
         user1.setCreatedBoards(Collections.singleton(boardCreated));
@@ -747,7 +748,7 @@ class BoardServiceTest {
 
         final User notAssignedUser = new User(uid, "test@test.com", "some_user", Set.of(), Set.of());
         final User boardOwner = new User("123", email, "board_owner", Set.of(), Set.of());
-        final Board board = buildBoard(boardOwner, EnumStateDto.CREATED, boardId, Set.of());
+        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(),3);
 
         // when
         when(userRepository.findById(uid)).thenReturn(Optional.of(notAssignedUser));
@@ -769,7 +770,7 @@ class BoardServiceTest {
 
         final User notAssignedUser = new User(uid, email, "some_user", Set.of(), Set.of());
         final User boardOwner = new User("123", "boardOwner@test.pl", "board_owner", Set.of(), Set.of());
-        final Board board = buildBoard(boardOwner, EnumStateDto.CREATED, boardId, Set.of());
+        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(),3);
 
         // when
         when(userRepository.findById(uid)).thenReturn(Optional.of(notAssignedUser));
@@ -810,7 +811,7 @@ class BoardServiceTest {
 
         final User boardOwner = new User("123", "boardOwner@test1.com", "board_owner", Set.of(), Set.of());
         final User userToRemove = new User(uid, "test3@test3.com", "userTest", Set.of(), Set.of());
-        final Board board = buildBoard(boardOwner, EnumStateDto.CREATED, boardId, Set.of(userToRemove));
+        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(userToRemove),3);
 
         //when
         when(userRepository.findById(uid)).thenReturn(Optional.of(userToRemove));
@@ -833,7 +834,7 @@ class BoardServiceTest {
         final Integer boardId = 10;
 
         final User boardOwner = new User(uid, email, "board_owner", Set.of(), Set.of());
-        final Board board = buildBoard(boardOwner, EnumStateDto.CREATED, boardId, Set.of());
+        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, Set.of(),3);
 
         //when
         when(userRepository.findById(uid)).thenReturn(Optional.of(boardOwner));
@@ -856,7 +857,7 @@ class BoardServiceTest {
 
         final User boardOwner = new User("12345", email, "board_owner", Set.of(), Set.of());
         final User userToRemove = new User(uid, "test2@test2.com", "userTest", Set.of(), Set.of());
-        final Board board = buildBoard(boardOwner, EnumStateDto.CREATED, boardId, new HashSet<>());
+        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, new HashSet<>(),3);
         board.getUsers().add(userToRemove);
 
         //when
@@ -881,7 +882,7 @@ class BoardServiceTest {
 
         final User boardOwner = new User("12345", "boardOwner@test1.com", "board_owner", Set.of(), Set.of());
         final User currentlyLogged = new User(uid, email, "currently_logged", Set.of(), Set.of());
-        final Board board = buildBoard(boardOwner, EnumStateDto.CREATED, boardId, new HashSet<>());
+        final Board board = buildBoard(boardId, EnumStateDto.CREATED, boardOwner, new HashSet<>(),3);
         board.getUsers().add(currentlyLogged);
 
         //when
@@ -896,13 +897,116 @@ class BoardServiceTest {
         assertTrue(board.getUsers().isEmpty());
     }
 
-    private Board buildBoard(final User user, final EnumStateDto state, final int id, final Set<User> users) {
+    @Test
+    @DisplayName("When setNextState is called - it will change state from CREATED to VOTING (next) and return board details.")
+    void setNextStateChangeStateValueAndSaveTheData()  {
+        // given
+        final var uid = "uid101";
+        final var email = "username@test.pl";
+        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
+        final var board = buildBoard(10, EnumStateDto.CREATED, user, Set.of(), 3);
+        when(boardRepository.save(any(Board.class))).thenReturn(board);
+        when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
+        when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
+
+        // when
+        final var boardDtoResult = boardService.setNextState(board.getId(), email);
+
+        // then
+        assertEquals(boardDtoResult.getBoard().getState(), EnumStateDto.VOTING);
+        verify(boardRepository).findById(board.getId());
+        verify(boardRepository).save(any(Board.class));
+    }
+
+    @Test
+    @DisplayName("When setNextState is used on a board with EnumStateDto set to DONE - Not Acceptable Exception is thrown.")
+    void setNextStateThrowsNotAcceptableIfStateIsDone() {
+        // given
+        final var uid = "uid101";
+        final var email = "username@test.pl";
+        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
+        final var board = buildBoard(10,EnumStateDto.DONE, user, Set.of(), 3);
+        when(boardRepository.save(any(Board.class))).thenReturn(board);
+        when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
+        when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
+
+        // when
+        final NotAcceptableException exception = assertThrows(
+                NotAcceptableException.class, () -> boardService.setNextState(board.getId(),email));
+
+        // then
+        assertEquals("Already in last state", exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("When setNextState is used on a board which does not exist - Not Found Exception is thrown.")
+    void setNextStateThrowsNotFoundIfBoardIsNotFound() {
+        // given
+        final var uid = "uid101";
+        final var email = "username@test.pl";
+        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
+        final var board_id = 1;
+        when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
+        when(boardRepository.findById(board_id)).thenReturn(Optional.empty());
+
+        // when
+        final NotFoundException exception = assertThrows(
+                NotFoundException.class, () -> boardService.setNextState(board_id,email));
+
+        // then
+        assertEquals("Board not found", exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("When setNextState is used on a board which the user is not a creator of - Not Found Exception is thrown.")
+    void setNextStateThrowsNotFoundIfUserIsNotAnOwner() {
+        // given
+        final var uid1 = "uid101";
+        final var email1 = "username1@test.pl";
+        final var uid2 = "uid102";
+        final var email2 = "username2@test.pl";
+        final var owner = new User(uid1, email1, "displayName", Set.of(), Set.of());
+        final var user = new User(uid2, email2, "displayName2", Set.of(), Set.of());
+        final var board = buildBoard(10, EnumStateDto.CREATED, owner, Set.of(), 3);
+        when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
+        when(userRepository.findUserByEmail(email2)).thenReturn(Optional.of(user));
+
+        // when
+        final NotFoundException exception = assertThrows(
+                NotFoundException.class, () -> boardService.setNextState(board.getId(),email2));
+
+        // then
+        assertEquals("User is not the board owner.", exception.getMessage());
+    }
+
+    @Test
+    @DisplayName("When setNextState() is called on a board with maximumNumberOfVotes = 0 -> Bad Request Exception is thrown.")
+    void setNextStateThrowsBadRequestWhenNumberOfVotesIsNotSet() {
+        // given
+        final var uid = "uid101";
+        final var email = "username@test.pl";
+        final var user = new User(uid, email, "displayName", Set.of(), Set.of());
+        final var board = buildBoard(10,EnumStateDto.CREATED, user, Set.of(),0);
+        when(boardRepository.save(any(Board.class))).thenReturn(board);
+        when(boardRepository.findById(board.getId())).thenReturn(Optional.of(board));
+        when(userRepository.findUserByEmail(email)).thenReturn(Optional.of(user));
+
+        // when
+        final BadRequestException exception = assertThrows(
+                BadRequestException.class, () -> boardService.setNextState(board.getId(),email));
+
+        // then
+        assertEquals("Number of votes not set!", exception.getMessage());
+    }
+
+    private Board buildBoard(final int id, final EnumStateDto state, final User user, final Set<User> users, final Integer maximumNumberOfVotes) {
         return Board.builder()
                 .id(id)
                 .name("My first board.")
                 .state(state)
                 .creator(user)
                 .users(users)
+                .maximumNumberOfVotes(maximumNumberOfVotes)
                 .build();
     }
 }
